# Polarity

./: .gitignore  4267304690.der  Cargo.toml  LICENSE  README.md  start.sh  update.sh
.cargo/: config.toml
player/: .gitignore  Cargo.toml
player/src/: audio.rs  auth.rs  lib.rs  player.rs
src/: app.rs  input.rs  list.rs  main.rs  polaris.rs
src/tui/: app.rs  mod.rs  screen1.rs  status_bar.rs  tui.rs
src/tui/screen1/: controller.rs  mod.rs  model.rs  view.rs
src/tui/shutdown/: controller.rs  mod.rs  view.rs
terminal/src/: main.rs  options.rs  polaris.rs
terminal/src/tui/: app.rs  input.rs  menu.rs  mod.rs
terminal/src/tui/home/: mod.rs
terminal/src/tui/home/background/: controller.rs  mod.rs  model.rs  view.rs
terminal/src/tui/home/foreground/: controllers.rs  mod.rs  models.rs  views.rs
terminal/src/tui/playback/: controller.rs  mod.rs  model.rs  view.rs
terminal/src/tui/playback/content/: controller.rs  model.rs  view.rs
terminal/src/tui/playback/title/: controller.rs  model.rs  view.rs
terminal/src/tui/playlist/: controllers.rs  mod.rs  models.rs  views.rs
terminal/src/tui/screen1/: controller.rs  mod.rs  model.rs  view.rs
terminal/src/tui/screen1/background/: controller.rs  model.rs  view.rs
terminal/src/tui/screen1/foreground/: controller.rs  controllers.rs  mod.rs  model.rs  models.rs  view.rs  views.rs
terminal/src/tui/search/: controllers.rs  mod.rs  models.rs  views.rs
terminal/src/tui/shutdown/: controller.rs  mod.rs  model.rs  view.rs
