[package]
name = "Polarity"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "list"
path = "src/list.rs"

[[bin]]
name = "input"
path = "src/input.rs"

#[[bin]]
#name = "scrollbar"
#path = "src/scrollbar.rs"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
rppal = "0.22.1"

