[package]
name = "Polarity"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
rppal = "0.22.1"

awc = { version = "3.7.0", features = [ "rustls-0_23" ] }
actix-rt = { version = "2.1", features = ["macros"] }
actix-tls = { version = "3.4", features = [ "rustls-0_23", "rustls-0_23-webpki-roots", "connect", "uri" ] }
env_logger = "0.11"
tls-rustls-0_23 = { package = "rustls", version = "0.23" }
#tls-openssl = { package = "openssl", version = "0.10.55", optional = true }
tokio = { version = "1.45.1", features = [ "macros", "rt-multi-thread" ] }
serde_json = "1.0.141"
rustls-pki-types = "1.12.0"

