[package]
name = "Polarity"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/app.rs"

[[bin]]
name = "tui"
path = "terminal/src/main.rs"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
rppal = "0.22.1"
player = { path = "./player" }

env_logger = "0.11"
tls-rustls-0_23 = { package = "rustls", version = "0.23" }
tokio = { version = "1.45.1", features = [ "macros", "rt-multi-thread", "net", "fs" ] }
serde_json = "1.0.141"
rustls-pki-types =  { version = "1.12.0" }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json"] }
webpki-roots = "1.0.2"

#==============

futures = "0.3"
tarpc = { version = "0.36", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4"
opentelemetry = { version = "0.26.0" }
opentelemetry-otlp = "0.26.0"
tracing = { version = "0.1" }
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.16.0"
argfile = "0.2.1"

#openssl-sys = { version = "0.9.109", feature = ["vendored"] }

#===============