
[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.36", features = ["full"] }

clap = { version = "4.4.18", features = ["derive"] }
log = "0.4"
opentelemetry = { version = "0.26.0" }
opentelemetry-otlp = "0.26.0"
tracing = { version = "0.1" }
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.16.0"
rand = "0.8"

#simple_crypt = "*"

env_logger = "0.11"
tls-rustls-0_23 = { package = "rustls", version = "0.23", optional = true }
#tls-openssl = { package = "openssl", version = "0.10.55", optional = false }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "fs"] }
serde_json = "1.0.141"
rustls-pki-types =  { version = "1.12.0", optional = true }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"], optional = true }
webpki-roots = "1.0.2"
bytes = "1.10.1"
rodio = { version = "0.21.1", optional = true }

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[features]
build-player = [ "tls-rustls-0_23", "rustls-pki-types", "reqwest", "rodio" ]

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name="player"
path="src/player.rs"
required-features = [ "build-player" ]
